--- a/install
+++ b/install
@@ -22,7 +22,7 @@ if [[ ${REPLY:-y} =~ ^[Yy]$ ]]; then
   sudo apt-get upgrade
 
   # Install Reqired packages
-  sudo apt-get -y install curl git build-essential cmake python3 python3-dev python3-pip
+  sudo apt-get -y install curl git wget build-essential cmake python3 python3-dev python3-pip
 fi
 
 #### Rust/Cargo #### (needed for tree-sitter in neovim)
@@ -30,7 +30,7 @@ read -p "Do you want to install Rust? [y/n] " -n 1 -r
 echo
 if [[ ${REPLY:-y} =~ ^[Yy]$ ]]; then
   # install rust
-  curl https://sh.rustup.rs -sSf | sh
+  curl https://sh.rustup.rs -sSf | sh -s -- -y
 fi
 
 #### nvm (node) ####
@@ -79,11 +79,12 @@ read -p "Do you want to install neovim/tmux configuration, plugins and themes? [
 echo
 if [[ ${REPLY:-y} =~ ^[Yy]$ ]]; then
   ### nvim
-  # ubuntu
-  sudo apt-get -y install software-properties-common
-  sudo add-apt-repository ppa:neovim-ppa/stable
-  sudo apt-get -y install neovim
-  sudo apt-get -y install ripgrep # needed for telescope live_grep
+  # version 10.2
+  NEOVIM_VERSION=v0.10.2
+  wget https://github.com/neovim/neovim/releases/download/$NEOVIM_VERSION/nvim-linux64.tar.gz -P /tmp/
+  mkdir -p ~/.local/share
+  tar -zxvf /tmp/nvim-linux64.tar.gz -C ~/.local/share/
+  sudo ln -sf ~/.local/share/nvim-linux64/bin/nvim /usr/local/bin/nvim
 
   # link nvim dir to .config dir
   mkdir -p ~/.config
@@ -96,18 +97,18 @@ if [[ ${REPLY:-y} =~ ^[Yy]$ ]]; then
   sudo update-alternatives --set vim /usr/bin/nvim
   # if not sure of nvim path, check: `sudo update-alternatives --config vim`
 
-  # install packer.lua (https://github.com/wbthomason/packer.nvim)
-  git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
-
-  # win32yank.exe to let WSL copy/paste work
-  sudo cp nvim/plugin/win32yank.exe /bin/win32yank.exe
-  sudo chmod +x /bin/win32yank.exe
-  ## if you need to redownload win32yank, get it from here:
-  # curl -sLo/tmp/win32yank.zip https://github.com/equalsraf/win32yank/releases/download/v0.0.4/win32yank-x64.zip
-  # unzip -p /tmp/win32yank.zip win32yank.exe > /tmp/win32yank.exe
-
-  # install tree-sitter-cli for Packer package tree-sitter
-  cargo install tree-sitter-cli
+  # # install packer.lua (https://github.com/wbthomason/packer.nvim)
+  # git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim
+  #
+  # # win32yank.exe to let WSL copy/paste work
+  # sudo cp nvim/plugin/win32yank.exe /bin/win32yank.exe
+  # sudo chmod +x /bin/win32yank.exe
+  # ## if you need to redownload win32yank, get it from here:
+  # # curl -sLo/tmp/win32yank.zip https://github.com/equalsraf/win32yank/releases/download/v0.0.4/win32yank-x64.zip
+  # # unzip -p /tmp/win32yank.zip win32yank.exe > /tmp/win32yank.exe
+  #
+  # # install tree-sitter-cli for Packer package tree-sitter
+  # cargo install tree-sitter-cli
 
   ### tmux
   sudo apt-get -y install tmux
