--- a/install
+++ b/install
@@ -23,6 +23,11 @@ if [[ ${REPLY:-y} =~ ^[Yy]$ ]]; then
 
   # Install Reqired packages
   sudo apt-get -y install curl git wget build-essential cmake python3 python3-dev python3-pip
+  
+  # fzf
+  fzf_version=0.57.0
+  wget "https://github.com/junegunn/fzf/releases/download/v$fzf_version/fzf-${fzf_version}-linux_amd64.tar.gz" -p /tmp/
+  sudo tar -zxvf "/tmp/fzf-${fzf_version}-linux_amd64.tar.gz" -C /usr/local/bin
 fi
 
 #### Rust/Cargo #### (needed for tree-sitter in neovim)
